# cmake-examples

./: README.md
01_basic/: CMakeLists.txt  main.cpp
02_specific_ver/: CMakeLists.txt  main.cpp
03_version_string/: CMakeLists.txt  main.cpp  version.h.in
04_sub_dir/: CMakeLists.txt  main.cpp
04_sub_dir/calculation/: CMakeLists.txt
05_gtest/: CMakeLists.txt  readme
